--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,23 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
+apply plugin: 'war'
 
 jar {
     baseName = 'gs-rest-service'
     version =  '0.1.0'
 }
 
+war {
+    baseName = 'goessflix'
+    version =  '0.0.0.1'
+}
 repositories {
     mavenCentral()
+}
+
+configurations {
+    providedRuntime
 }
 
 sourceCompatibility = 1.8
@@ -26,6 +35,7 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
     testCompile("junit:junit")
 }
 
