--- a/build.gradle
+++ b/build.gradle
@@ -2,25 +2,20 @@ buildscript {
     repositories {
         mavenCentral()
     }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.3.RELEASE")
-    }
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'spring-boot'
 apply plugin: 'war'
 
 jar {
     baseName = 'gs-rest-service'
-    version =  '0.1.0'
+    version = '0.1.0'
 }
 
 war {
     baseName = 'goessflix'
-    version =  '0.0.0.1'
+    version = '0.0.0.1'
 }
 repositories {
     mavenCentral()
@@ -34,8 +29,18 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+    compile("org.springframework:spring-core:4.2.5.RELEASE")
+    compile("org.springframework:spring-web:4.2.5.RELEASE")
+    compile("org.springframework:spring-webmvc:4.2.5.RELEASE")
+    compile("org.springframework:spring-beans:4.2.5.RELEASE")
+    compile("org.springframework:spring-context-support:4.2.5.RELEASE")
+    compile("org.springframework:spring-expression:4.2.5.RELEASE")
+    compile("org.springframework:spring-aop:4.2.5.RELEASE")
+    compile("org.springframework.security:spring-security-config:4.0.4.RELEASE")
+    compile("org.springframework.security:spring-security-web:4.0.4.RELEASE")
+//    compile("org.hibernate:hibernate-validator")
+    compile("com.fasterxml.jackson.core:jackson-databind:2.7.3")
+//    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
     testCompile("junit:junit")
 }
 
