--- a/build.gradle
+++ b/build.gradle
@@ -2,23 +2,23 @@ buildscript {
     repositories {
         mavenCentral()
     }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.3.RELEASE")
+    }
 }
 
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'war'
 
-jar {
-    baseName = 'gs-rest-service'
-    version = '0.1.0'
-}
-
 war {
     baseName = 'HelloWeb'
-//    version = '0.0.0.1'
+    version = '0.0.0.1'
 }
 repositories {
     mavenCentral()
+    jcenter()
+    maven { url "http://repo.spring.io/libs-snapshot" }
 }
 
 configurations {
@@ -29,19 +29,11 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework:spring-core:4.2.5.RELEASE")
-    compile("org.springframework:spring-web:4.2.5.RELEASE")
-    compile("org.springframework:spring-webmvc:4.2.5.RELEASE")
-    compile("org.springframework:spring-beans:4.2.5.RELEASE")
-    compile("org.springframework:spring-context-support:4.2.5.RELEASE")
-    compile("org.springframework:spring-expression:4.2.5.RELEASE")
-    compile("org.springframework:spring-aop:4.2.5.RELEASE")
-    compile("org.springframework.security:spring-security-config:4.0.4.RELEASE")
-    compile("org.springframework.security:spring-security-web:4.0.4.RELEASE")
-//    compile("org.hibernate:hibernate-validator")
-    compile("com.fasterxml.jackson.core:jackson-databind:2.7.3")
-//    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
-    testCompile("junit:junit")
+    compile("org.springframework.boot:spring-boot-starter-web:1.3.3.RELEASE")
+    compile("org.springframework.boot:spring-boot-starter-data-rest:1.3.3.RELEASE")
+    compile("org.springframework.boot:spring-boot-starter-data-mongodb:1.3.3.RELEASE")
+    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat:1.3.3.RELEASE")
+    testCompile("junit:junit:4.12")
 }
 
 task wrapper(type: Wrapper) {
