--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'war'
 
 war {
     baseName = 'HelloWeb'
-    version = '0.0.0.1'
+    version = '0.0.0.2'
 }
 repositories {
     mavenCentral()
@@ -32,6 +32,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:1.3.3.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-data-rest:1.3.3.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-data-mongodb:1.3.3.RELEASE")
+    compile(group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2')
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat:1.3.3.RELEASE")
     testCompile("junit:junit:4.12")
 }
